Fixed layout bug with nav.

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,6 @@ body {
     position:fixed;
     top: 16px;
     left:0px;
-    right:0px;
-    bottom:0px;
 }
 
 #navlist li {
